<resources>
    <!-- Login -->
    <string name="app_name">MeuPDV</string>
    <string name="descr_logo">Logo do projeto</string>
    <string name="username">Nome de usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Entrar</string>

    <!-- MenuPrincipal -->
    <string name="title_activity_menu_principal">@string/app_name</string>
    <string name="sair">Fechar</string>

    <!-- Analisis -->
    <string name="chart_time_mode_day">Por Dia</string>
    <string name="chart_time_mode_week">Por Semana</string>
    <string name="chart_time_mode_month">Por Mês</string>
    <string name="chart_time_mode_year">Por Ano</string>

    <!-- Produtos -->
    <string name="searchHint">PesquisarProduto</string>
    <string name="prods_menu_item_title">Produtos</string>

    <!-- Produto -->
    <string name="prod_nome">Nome do Produto</string>
    <string name="prod_quant">Quant. de Produtos</string>
    <string name="prod_preco">Preço do Produto</string>
    <string name="prod_validade">Validade</string>
    <string name="prod_barras">Código de Barras</string>
    <string name="title_activity_cadastrar_produto">Cadastrar Produto</string>

    <!-- Fornecedor -->
    <string name="fornecedor_mult">Fornecedores</string>
    <string name="fornecedor_sem">Nenhum Fornecedor Encontrado</string>
    <string name="fornecedor_novo">Novo Fornecedor</string>
    <string name="fornecedor_nome">Nome Completo</string>
    <string name="fornecedor_email">Email</string>
    <string name="fornecedor_telefone">Telefone</string>

    <!--Tela principal-->
    <string name="carregando">Carregando…</string>
    <string name="pdv_own">Meus PDV\'s</string>

    <!-- Alertas -->
    <string name="nome_vazio">você não digitou um nome</string>
    <string name="email_vazio">você não digitou um email</string>
    <string name="telefone_vazio">você não digitou um telefone</string>

    <!--Cadastro de fornecedor-->
    <string name="title_activity_cadastrar_fornecedor">Cadastrar Fornecedor</string>
    <string name="atividade_novo_fornecedor">Novo Fornecedor</string>

    <!-- Pagina Cadastro!-->
    <string name="title_activity_novo_pdv">Novo Ponto de Venda</string>
    <string name="npdv_nome">Nome do Ponto de Venda</string>
    <string name="npdv_lema">Slogan do seu PDV</string>

    <!--Selecionador de imagem-->
    <string name="imagem_camera">Tirar foto com a câmera</string>
    <string name="imagem_galeria">Selecionar da Galeria</string>

    <string name="title_activity_produtos">Produtos</string>
    <string name="title_activity_produto">Produto</string>
    <string name="produto_mult">Produtos</string>
    <string name="search_button_cont_desc">procurar</string>
    <string name="cad_prod_forn_hint">Fornecedor</string>

    <string name="epdv_title">Editar PDV</string>

    <!--bug android studio-->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_pos_caixa">Confirmar Produtos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
