<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="etec.coda_softwares.meupdv.CadastrarProduto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/prod_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/prod_image"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:adjustViewBounds="true"
        android:maxHeight="180dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/mypdv" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <com.rey.material.widget.EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/prod_nome"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:nextFocusDown="@string/prod_quant"
                android:nextFocusForward="@string/prod_quant"
                android:nextFocusRight="@string/prod_quant"
                android:nextFocusUp="@string/prod_quant"
                app:et_dividerHeight="2dp"
                app:et_inputId="@+id/prod_nome"
                app:et_labelEnable="true" />

            <com.rey.material.widget.EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/prod_validade"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:maxLines="1"
                app:et_dividerHeight="2dp"
                app:et_inputId="@+id/prod_validade"
                app:et_labelEnable="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <com.rey.material.widget.EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/prod_quant"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    app:et_dividerHeight="2dp"
                    app:et_inputId="@+id/prod_quant"
                    app:et_labelEnable="true" />

                <com.rey.material.widget.EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prod_preco"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    app:et_dividerHeight="2dp"
                    app:et_inputId="@+id/prod_preco"
                    app:et_labelEnable="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <com.rey.material.widget.EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:hint="@string/prod_barras"
                    android:inputType="number|numberSigned"
                    android:maxLines="1"
                    app:et_dividerHeight="2dp"
                    app:et_inputId="@+id/prod_barras"
                    app:et_labelEnable="true" />

                <com.rey.material.widget.ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="carregarCodBarras"
                    android:src="@drawable/ic_camera" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
