<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:actionBarNavMode="standard"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="@color/colorPrimary"
    tools:context="etec.coda_softwares.meupdv.TelaInicial">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@android:color/background_light"
        android:layout_height="wrap_content"
        android:paddingBottom="18dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/descr_logo"
            android:cropToPadding="true"
            android:padding="-5dp"
            android:src="@drawable/mypdv"
            android:layout_weight="0.33" />

        <!--Inicio Usuario!-->
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/log_tb_username"
            android:hint="@string/usernname"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" />

        <TextView
            android:id="@+id/log_lb_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/log_tb_username"
            android:text="@string/usernname"
            android:visibility="invisible" />
        <!--Fim Usuario!-->

        <!--Inico senha!-->
        <EditText
            android:id="@+id/log_tb_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/log_lb_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/log_tb_senha"
            android:text="@string/senha"
            android:visibility="invisible" />
        <!--Fim Senha!-->

        <ProgressBar
            android:id="@+id/log_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:indeterminate="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="logar"
            android:text="@string/login" />

    </LinearLayout>
</ScrollView>
