<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="etec.coda_softwares.meupdv.EditPDV">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/epdv_toobar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/epdv_title" />
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margem_lateral"
        android:layout_marginRight="@dimen/margem_lateral">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/epdv_img"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_caixa"
            app:civ_border_color="#808080"
            app:civ_border_width="1dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/epdv_nomelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/epdv_img"
            android:layout_marginTop="18dp">

            <EditText
                android:id="@+id/epdv_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/npdv_nome" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/epdv_nomelayout"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/epdv_lema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/npdv_lema" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1.3dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="Participantes "
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/epdv_mais"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/text"
            android:layout_marginRight="3dp"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="enviarEnvite"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_mais" />

        <ListView
            android:id="@+id/epdv_participantes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/text" />
    </RelativeLayout>
</LinearLayout>
